objects/EmailC__c.object
<CustomObject>
    <description>This object is used by IFS - Data Ops to upload email collection results through eAppend for the email marketing team.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Collections</relationshipLabel>
        <relationshipName>Email_Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Marketing_Id__c</fullName>
        <label>Email Marketing Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails_Uploaded__c</fullName>
        <label># Uploaded</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Upload_Date__c</fullName>
        <label>Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MatchRate__c</fullName>
        <formula>if(OR( 
Emails_Uploaded__c=null,Emails_Uploaded__c=0) 
,null, 
(Emails_Uploaded__c / Records_Sent__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Rate %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Records_Sent__c</fullName>
        <label># Records Sent</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_eAppend__c</fullName>
        <label>Sent to eAppend</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>if( OR(ISPICKVAL(eAppend_Vendor__c, &quot;eAppend1&quot;),(ISPICKVAL(eAppend_Vendor__c, &quot;eAppend4&quot;))),

if( Emails_Uploaded__c &lt;501,&quot;Tier 1&quot;,if(AND(Emails_Uploaded__c&gt;500,Emails_Uploaded__c&lt;1001),&quot;Tier 2&quot;,if(AND(Emails_Uploaded__c&gt;1000,Emails_Uploaded__c&lt;2001),&quot;Tier 3&quot;,&quot;Over 2000, Need Approval&quot;))),null)</formula>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eAppend_Vendor__c</fullName>
        <label>eAppend Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>eAppend1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>eAppend2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eAppend3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eAppend4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eAppend5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eAppend6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eAppend7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Email Collection</label>
    <nameField>
        <displayFormat>{mm}/{dd}/{yy}-adv-{0}</displayFormat>
        <label>Email Collection</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>